--- a/app/assets/stylesheets/modules/panel_list.css.scss
+++ b/app/assets/stylesheets/modules/panel_list.css.scss
@@ -39,7 +39,7 @@ $panel-list-thumbnail-container-size: $panel-list-thumbnail-size + 4px;
   }
 
   h3 {
-    overflow: hidden;
+    word-wrap: break-word;
   }
 }
 
@@ -63,6 +63,11 @@ $panel-list-thumbnail-container-size: $panel-list-thumbnail-size + 4px;
 
   .button {
     @include list-panel-button;
+  }
+
+  .granule-temporal-range {
+    width: 180px;
+    display: inline-block;
   }
 }
 
@@ -109,6 +114,13 @@ $panel-list-thumbnail-container-size: $panel-list-thumbnail-size + 4px;
   display: inline-block;
   vertical-align: top;
   float: right;
+}
+
+.panel-list-item-actions {
+
+  &.granule-item-actions {
+    float: right;
+  }
 }
 
 .panel-list-thumbnail-container {
